# vicon_bridge

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  main.cpp
config/: scheduler.yaml
include/: vicon_plugin.hpp
include/dls/state_estimator/: vicon_bridge.hpp
include/vicon_bridge/: vicon_bridge.hpp
launch/: vicon.launch
src/: vicon_bridge.cpp  vicon_plugin.cpp
